no commit message

--- a/Languages/Go/go.language.txt
+++ b/Languages/Go/go.language.txt
@@ -6,7 +6,7 @@
 
 
 TODO:
-  - https://golang.org/doc/effective_go.html#control-structures
+  - https://golang.org/doc/effective_go.html#errors
   - https://golang.org/ref/mem
   - https://golang.org/doc/faq
   - https://golang.org/doc/diagnostics.html
@@ -17,6 +17,7 @@ TODO:
      - all go* executable
      - after go doc, read again https://golang.org/doc/effective_go.html#commentary
   - https://golang.org/pkg/
+     - after io package, read again https://golang.org/doc/effective_go.html#printing
   - https://github.com/golang?type=source
   - go through to_learn.txt
 
@@ -71,9 +72,9 @@ if [EXPR;] BOOL_EXPR { ... }
  [else { ... }]                   #
 
 switch [EXPR;] [EXPR2] {
-  [case EXPR3:
+  [case EXPR3,...:
     ...]...
-  [default:                       #Execute first case where EXPR2 == EXPR3
+  [default:                       #Execute first case where EXPR2 == any EXPR3
     ...]                          #EXPR2 defaults to true
 }                                 #Cases are indentation-based
   fallthrough                     #Cases "break" by default.
@@ -87,8 +88,8 @@ for [BOOL_EXPR] { ... }           #Same as for ; [BOOL_EXPR]; { ... }
                                   #I.e. while loop
 
 for KEY_VAR[, VAL_VAR2]           #Iterates
-  := range STR|MAP|[*]ARR|SLICE   #KEY is INT for STR|ARR|SLICE
-  { ... }                         #For STR, VAL is RUNE
+  := range STR|MAP|[*]ARR|SLICE   #KEY is INT for ARR|SLICE
+  { ... }                         #For STR, VAL is RUNE, KEY is byte position INT
                                   #For MAP, iteration is unordered
 for ... = range ...               #Same but with already declared KEY_VAR, VAL_VAR
 
@@ -374,12 +375,13 @@ len(STR)->UINT                    #Size, in byte (not character)
 
 nil                               #Zero-value of any *TYPE
 
-&VAR                              #Generate a pointer (TYPE -> *TYPE)
+&VAR
+&TYPE{...}                        #Generate a pointer (TYPE -> *TYPE)
 *POINTER                          #Dereference a pointer (*TYPE -> TYPE)
 
 STRUCT.VAR                        #Same as (*STRUCT).VAR
 POINTER.FUNC(...)                 #Same as (*POINTER).FUNC(...) when using a non-POINTER_TYPE receiver
-VAL.FUNC(...)                     #Same as (&VAL).FUNC(...) when using a POINTER_TYPE receiver
+VAR.FUNC(...)                     #Same as (&VAR).FUNC(...) when using a POINTER_TYPE receiver
 ARR_POINTER[...[:...[:...]]]      #Same as (*ARR_POINTER)[...[:...[:...]]]
 
 new(TYPE)                         #Same as:
@@ -394,7 +396,7 @@ new(TYPE)                         #Same as:
                                              \=+===============================+=/
 
 
-unsafe.*                          #Not recommended, as memory layout assumption might not be portable
+import "unsafe"                   #Not recommended, as memory layout assumption might not be portable
 
 unsafe.Pointer                    #*TYPE with unknown value TYPE
                                   #  - cannot be deferenced
@@ -465,8 +467,8 @@ _                                 #Special VAR name ("blank identifier").
                                   #Not checked in STRUCT == STRUCT2
                                   #Not allowed in INTERFACE
 
-ZERO-VALUE VS INITIALIZED VALUE   #Zero-value is default value when no assigned value (including nil)
- ==>                              #Initialized value is first assigned value (including empty).
+ZERO-VALUE ==>                    #Default value when no assigned value (including nil, e.g. with new())
+INITIALIZED VALUE ==>             #First assigned value (including empty, e.g. with make()).
 
 VAL,...                           #Multiple values (MVAL)
                                   #Similar to array, except must be stored in one variable each
@@ -531,6 +533,7 @@ func FUNC([VAR] [TYPE],...)       #Function declaration
                                   #  - cannot refer to any arguments
                                   #TYPE2 is return type
                                   #  - TYPE,... is when returning MVAL
+                                  #     - if second is BOOL, often named "ok" ("comma ok")
                                   #  - if named (VAR2): declare the variable on top of function
                                   #TYPE can be variadic ...TYPE, i.e. 0-n arguments:
                                   #  - must be last
@@ -703,6 +706,7 @@ len(MAP)->UINT                    #Number of keys
 [UINT]TYPE                        #ARR_TYPE
                                   #UINT is static size.
                                   #  - can be an EXPR
+                                  #Prefer SLICE if possible
 
 EMPTY ARR ==>                     #Zero-value, i.e. each element uses its own zero-value
                                   #No nil
@@ -847,6 +851,7 @@ go FUNC(...)                      #Call a function but inside a new thread.
                                   #Process does not wait for thread exit
                                   #  - but process exit terminates threads
                                   #  - can used CHAN to wait
+                                  #If FUNC is a closure, thread still holds reference to upper scopes, even if in different thread
 
 
                                              /=+===============================+=\
@@ -895,7 +900,7 @@ select {
   [default:                       #A random case is executed
     ...]                          #  - only among CHAN <- VAL ready to send, or <-CHAN ready to receive
                                   #  - default block is only run if none ready
-}                                 #Similar syntax than switch, except no fallthrough
+}                                 #Similar syntax than switch, except no fallthrough and only one EXPR per case.
 for { select { ... } }            #Usually put in an infinite loop, and using return to exit
 
 len(CHAN)->UINT                   #Number of buffered elements
@@ -947,7 +952,7 @@ import                            #Available as top-level variable PACKAGE:
                                   #Idempotent: import is cached and side-effects are not redone
                                   #Must be available in GOBIN
 
-func init() { ... }               #Called when file gets imported, after package scope declarations done.
+func init() { ... }               #Called when file gets imported
                                   #Meant for import-time side-effects
                                   #Can be several per file|package
                                   #Cannot refer to it as FUNC call|value
@@ -956,10 +961,13 @@ INITIALIZATION ORDER ==>          #If a top-level declaration depends on another
                                   #  - even if different file
                                   #  - even if before it in line order
                                   #Package initialization order:
-                                  #  - filewise: depends on how it was compiled:
+                                  #  - import statements
+                                  #  - package scope declarations
+                                  #  - init()
+                                  #Within same initialization category, file-by-file:
+                                  #  - order depends on how it was compiled:
                                   #     - FILE...: arguments order
                                   #     - DIR: filename alphabetical order
-                                  #  - linewise
 
 
                                              /=+===============================+=\
@@ -1033,3 +1041,19 @@ go env -u ENVVAR                  #Unsets value
 
 ENVVAR GOENV                      #Where go env -w|-u ... is stored
                                   #Def: ~/.config/go/env
+
+
+                                             /=+===============================+=\
+                                            /  :                               :  \
+                                            )==:            RUNTIME            :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
+
+
+import "runtime"                  #
+
+runtime.NumCPU()->INT             #Number of CPU cores
+runtime.GOMAXPROCS(0)->INT2       #Retrieves the user-preferred number of goroutines in parallel
+runtime.GOMAXPROCS(INT)->INT2     #Sets it, and returns the previous one
+ENVVAR GOMAXPROCS                 #Default value for runtime.GOMAXPROCS.
+                                  #Def: runtime.NumCPU()
