no commit message

--- a/Languages/Go/go.language.txt
+++ b/Languages/Go/go.language.txt
@@ -6,12 +6,11 @@
 
 
 TODO:
-  - https://golang.org/doc/effective_go.html#errors
   - https://golang.org/ref/mem
   - https://golang.org/doc/faq
   - https://golang.org/doc/diagnostics.html
-  - https://blog.golang.org
   - https://github.com/golang/go/wiki
+  - https://blog.golang.org
   - https://golang.org/doc/cmd
      - all go CMD
      - all go* executable
@@ -194,7 +193,7 @@ NUM -> other NUM                  #Not if:
                                   #  - too high NUM -> smaller NUM (overflows)
                                   #  - negative NUM -> UINT (overflows)
 UINT32|RUNE -> STR
-UINT32|RUN_SLICE <-> STR          #Using Unicode codepoint
+[]UINT32|[]RUNE <-> STR           #Using Unicode codepoint
 CHAN -> other CHAN                #Only if does not lose receiver|sender direction.
                                   #E.g. CHAN to CHAN<-, CHAN to <-CHAN, but not inverse.
 
@@ -623,8 +622,7 @@ func ([VAR3] RECEIVER_TYPE)       #Method declaration.
                                   #     - i.e. not by "type TYPE TYPE2"
 VAR3.FUNC(...)                    #Method value|call
 RECEIVER_TYPE.FUNC(VAR3, ...)
-(*RECEIVER_TYPE).FUNC
- (VAR3_POINTER, ...)
+(*RECEIVER_TYPE).FUNC(*VAR3, ...)
 INTERFACE_TYPE.FUNC(INTERFAC, ...)#Method expression. Same as VAR3.FUNC but FUNC type's first argument is of RECEIVER_TYPE
 VAR3.FUNC
 RECEIVER_TYPE.FUNC
@@ -820,7 +818,9 @@ error                             #INTERFACE_TYPE
                                   #  - ERROR_TYPEs should be STRUCT implementing this INTERFACE
                                   #  - either:
                                   #     - returned as MVAL: VAL, ERROR|nil, to be tested by caller
+                                  #        - preferred if libraries, or recoverable
                                   #     - passed to panic(ERROR)
+                                  #        - preferred if not recoverable
 ERROR.Error()->STR                #Serialize an ERROR
 ERROR.*Error()                    #By convention, a noop function with the error name is used to differentiate INTERFACE_TYPE
 
