no commit message

--- a/Languages/Go/go.language.txt
+++ b/Languages/Go/go.language.txt
@@ -18,6 +18,7 @@ TODO:
   - https://golang.org/pkg/
      - after io package, read again https://golang.org/doc/effective_go.html#printing
   - https://github.com/golang?type=source
+  - add VSCode shortcuts
   - go through to_learn.txt
 
 VERSION ==>                       #1.14.4
