no commit message

--- a/Languages/Go/go.language.txt
+++ b/Languages/Go/go.language.txt
@@ -6,7 +6,6 @@
 
 
 TODO:
-  - https://golang.org/ref/mem
   - https://golang.org/doc/faq
   - https://golang.org/doc/diagnostics.html
   - https://github.com/golang/go/wiki
@@ -843,16 +842,44 @@ RUNTIME_ERROR.RuntimeError()      #
                                              \=+===============================+=/
 
 
-go FUNC(...)                      #Call a function but inside a new thread.
-                                  #Arguments are evaluated in the current thread though.
-                                  #Threads:
-                                  #  - consume less CPU and memory than processes
-                                  #  - share same memory|scope
+go FUNC(...)                      #Call a function but inside a new goroutine.
+                                  #Arguments are evaluated in the current goroutine though.
+
+GOROUTINE ==>                     #Like coroutine:
                                   #  - run concurrently
-                                  #Process does not wait for thread exit
+                                  #  - based on co-operative scheduling (CHAN)
+                                  #  - can share process memory|scope
+                                  #  - consume less CPU and memory than processes
+                                  #However:
+                                  #  - use OS threads under hood, unlike usual coroutines which are fully userland
+                                  #  - i.e. benefits from OS scheduling and multi-core parallelism
+                                  #Use a threads pool:
+                                  #  - each time goroutine yields (with CHAN<- or <-CHAN), return thread to pool
+                                  #  - when continue, inverse
+
+EXIT ==>                          #Process does not wait for thread exit
                                   #  - but process exit terminates threads
-                                  #  - can used CHAN to wait
-                                  #If FUNC is a closure, thread still holds reference to upper scopes, even if in different thread
+                                  #  - can used synchronization to wait
+
+SHARED MEMORY ==>                 #All goroutines from same package share package scope.
+                                  #Also, if FUNC is closure, still holds reference to uper scopes.
+
+COLLISION ==>                     #Can happen due to shared memory between goroutines.
+INSTRUCTIONS RE-ORDERING ==>      #Compiler might also re-order instructions when this would not impact behavior within same goroutine
+                                  #  - even if it might impact other goroutines accessing shared memory
+                                  #For example: a = 1; b = 2;
+                                  #  - second statement might be run before first since that does not change the current goroutine
+                                  #  - so if another goroutine should not assume that if b == 2, then a == 1
+
+SYNCHRONIZATION ==>               #See concurrency doc. Common synchronization patterns in Go:
+                                  #  - nothing is ever re-ordered before|after a go FUNC() statement
+                                  #  - CHAN send|receive is guaranteed to be in order
+                                  #  - "sync" and "sync/atomic" packages
+
+MAPS ==>                          #MAP[KVAL] = VAL is not atomic.
+                                  #I.e. one goroutine might read it while it is being half-written by another one
+                                  #  - i.e. not a problem if read-only, or write-only (single writer)
+                                  #However sync.map is atomic
 
 
                                              /=+===============================+=\
@@ -863,7 +890,7 @@ go FUNC(...)                      #Call a function but inside a new thread.
 
 
 chan TYPE                         #CHAN_TYPE.
-                                  #Pipe|FIFO with TYPE elements, meant for cross-thread communication
+                                  #Pipe|FIFO with TYPE elements, meant for cross-goroutine communication
 chan <- TYPE
 <- chan TYPE                      #Same but only allows sending or receiving
 
@@ -872,7 +899,7 @@ nil                               #Zero-value.
                                   #Length|capacity is 0
 
 make(chan TYPE[, UINT])->CHAN     #Creates a CHAN instance
-                                  #UINT is buffer size (def: 0, i.e. unbuffered)
+                                  #UINT is buffer size (def: 0, i.e. unbuffered|sync)
 
 CHAN <- VAL                       #Send VAL to CHAN (push).
                                   #If unbuffered, blocks until it gets received.
