no commit message

--- a/Languages/Go/go.language.txt
+++ b/Languages/Go/go.language.txt
@@ -6,19 +6,36 @@
 
 
 TODO:
-  - https://golang.org/doc/faq
-  - https://golang.org/doc/diagnostics.html
-  - https://github.com/golang/go/wiki
-  - https://blog.golang.org
+  - https://github.com/golang/go/wiki#additional-go-programming-wikis
   - https://golang.org/doc/cmd
      - all go CMD
      - all go* executable
+     - https://pkg.go.dev/golang.org/x/tools
      - after go doc, read again https://golang.org/doc/effective_go.html#commentary
+     - https://github.com/golang/go/wiki/GOPATH
+     - https://github.com/golang/go/wiki/MultipleGoRoots
+     - https://github.com/golang/go/wiki/PackageManagementTools
+     - https://github.com/golang/go/wiki/Modules
+     - https://github.com/golang/go/wiki/PackagePublishing
+     - https://www.johnsto.co.uk/blog/go-package-go/
+     - https://github.com/matttproud/gochecklist
+     - https://github.com/golang/go/wiki/GitHubCodeLayout
+     - https://github.com/golang/go/wiki/CompilerOptimizations
+     - https://blog.golang.org/race-detector
+     - https://godoc.org/
+     - https://pkg.go.dev/
+  - https://blog.golang.org
   - https://golang.org/pkg/
      - after io package, read again https://golang.org/doc/effective_go.html#printing
+     - after time package, https://github.com/golang/go/wiki/Timeouts
+  - https://golang.org/doc/diagnostics.html
   - https://github.com/golang?type=source
   - add VSCode shortcuts
   - go through to_learn.txt
+  - https://github.com/golang/go/wiki/CodeTools
+  - https://github.com/golang/go/wiki/Projects
+  - https://github.com/golang/go/wiki/LearnServerProgramming#toolkits-and-frameworks
+  - https://github.com/avelino/awesome-go
 
 VERSION ==>                       #1.14.4
                                   #For both language and standard library
@@ -1105,7 +1122,7 @@ ENVVAR GOENV                      #Where go env -w|-u ... is stored
 import "runtime"                  #
 
 runtime.NumCPU()->INT             #Number of CPU cores
-runtime.GOMAXPROCS(0)->INT2       #Retrieves the user-preferred number of goroutines in parallel
+runtime.GOMAXPROCS(0)->INT2       #Max number of goroutines running in parallel
 runtime.GOMAXPROCS(INT)->INT2     #Sets it, and returns the previous one
 ENVVAR GOMAXPROCS                 #Default value for runtime.GOMAXPROCS.
                                   #Def: runtime.NumCPU()
