no commit message

--- a/Languages/Go/go.language.txt
+++ b/Languages/Go/go.language.txt
@@ -6,12 +6,13 @@
 
 
 TODO:
-  - https://github.com/golang/go/wiki#additional-go-programming-wikis
   - https://golang.org/doc/cmd
      - all go CMD
      - all go* executable
      - https://pkg.go.dev/golang.org/x/tools
-     - after go doc, read again https://golang.org/doc/effective_go.html#commentary
+     - after go doc
+        - https://golang.org/doc/effective_go.html#commentary
+        - https://github.com/golang/go/wiki/Comments
      - https://github.com/golang/go/wiki/GOPATH
      - https://github.com/golang/go/wiki/MultipleGoRoots
      - https://github.com/golang/go/wiki/PackageManagementTools
@@ -27,7 +28,9 @@ TODO:
   - https://blog.golang.org
   - https://golang.org/pkg/
      - after io package, read again https://golang.org/doc/effective_go.html#printing
-     - after time package, https://github.com/golang/go/wiki/Timeouts
+     - after time package
+        - https://github.com/golang/go/wiki/Timeouts
+        - https://github.com/golang/go/wiki/RateLimiting
   - https://golang.org/doc/diagnostics.html
   - https://github.com/golang?type=source
   - add VSCode shortcuts
@@ -92,9 +95,10 @@ if [EXPR;] BOOL_EXPR { ... }
 
 switch [EXPR;] [EXPR2] {
   [case EXPR3,...:
-    ...]...
+    [...]]
+  ...
   [default:                       #Execute first case where EXPR2 == any EXPR3
-    ...]                          #EXPR2 defaults to true
+    [...]]                        #EXPR2 defaults to true
 }                                 #Cases are indentation-based
   fallthrough                     #Cases "break" by default.
                                   #Using fallthrough as last statement in a case continues to next case
@@ -395,12 +399,15 @@ len(STR)->UINT                    #Size, in byte (not character)
 nil                               #Zero-value of any *TYPE
 
 &VAR
-&TYPE{...}                        #Generate a pointer (TYPE -> *TYPE)
+&ARR|SLICE[UINT]
+&STRUCT.VAR                       #Generate a pointer (TYPE -> *TYPE)
+&TYPE{...}                        #Not allowed: &MAP[KVAL]
 *POINTER                          #Dereference a pointer (*TYPE -> TYPE)
 
 STRUCT.VAR                        #Same as (*STRUCT).VAR
-POINTER.FUNC(...)                 #Same as (*POINTER).FUNC(...) when using a non-POINTER_TYPE receiver
-VAR.FUNC(...)                     #Same as (&VAR).FUNC(...) when using a POINTER_TYPE receiver
+POINTER.METHOD(...)               #Same as (*POINTER).METHOD(...) when using a non-POINTER_TYPE receiver
+VAL.METHOD(...)                   #Same as (&VAL).METHOD when using a POINTER_TYPE receiver
+                                  #Not if VAL is INTERFACE|MAP
 ARR_POINTER[...[:...[:...]]]      #Same as (*ARR_POINTER)[...[:...[:...]]]
 
 new(TYPE)                         #Same as:
@@ -491,6 +498,8 @@ INITIALIZED VALUE ==>             #First assigned value (including empty, e.g. w
 
 VAL,...                           #Multiple values (MVAL)
                                   #Similar to array, except must be stored in one variable each
+                                  #Evaluated together, before what they assigned to
+                                  #  - e.g. can swap using a, b = b, a
 
 var VAR,... TYPE
 var (VAR,... TYPE;...)            #Declare + assign zero-value
@@ -850,18 +859,21 @@ recover()->VAL|nil                #Stop current panic, and return the VAL passed
                                   #  - not inside defer FUNC
 
 error                             #INTERFACE_TYPE
-                                  #By convention, ERROR_TYPEs should be STRUCT implementing this INTERFACE
+                                  #By convention:
+                                  #  - ERROR_TYPE should be STRUCT|STR implementing this INTERFACE
+                                  #  - ERROR_TYPE named *Error
+                                  #  - ERROR named err or err*
 ERROR.Error()->STR                #Serialize an ERROR
-ERROR.*Error()                    #Often used to differentiate INTERFACE_TYPE by error name
+ERROR.ERROR_TYPE()                #Often used to differentiate INTERFACE_TYPE by error name
 
 ERROR RETURN ==>                  #Returned as MVAL: VAL, ERROR|nil, to be tested by caller
-                                  #Preferred if libraries, or recoverable
+                                  #Preferred if recoverage, or libraries
                                   #Better for return type to be error, not specific ERROR_TYPE, because it restricts what's exposed
                                   #  - can still document ERROR_TYPE, and user can test type or transtype
-                                  #Should return nil (i.e. error(nil)), not specific ERROR_TYPE(nil), because it would be
-                                  #transtyped to INTERFACE error, which would then not be nil
+                                  #Should return nil (i.e. error(nil)), not specific ERROR_TYPE(nil)
+                                  #  - because it would be transtyped to INTERFACE error, which would then not be nil
 ERROR PANIC ==>                   #panic(ERROR)
-                                  #Preferred if not recoverable
+                                  #Preferred if not recoverable and not libraries
 
 runtime.Error                     #ERROR_INTERFACE_TYPE
                                   #Panicked by language runtime errors, such as:
@@ -1126,3 +1138,15 @@ runtime.GOMAXPROCS(0)->INT2       #Max number of goroutines running in parallel
 runtime.GOMAXPROCS(INT)->INT2     #Sets it, and returns the previous one
 ENVVAR GOMAXPROCS                 #Default value for runtime.GOMAXPROCS.
                                   #Def: runtime.NumCPU()
+
+
+                                             /=+===============================+=\
+                                            /  :                               :  \
+                                            )==:              CGO              :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
+
+
+CGO ==>                           #Used to use C from|to Go
+                                  #Only with gc compiler
+                                  #Not documented until needed
