no commit message

--- a/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
+++ b/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
@@ -1125,11 +1125,17 @@ en|decodeURI(STR)                               #Percent-encode any character no
                                                 #decodeURI() can throw URIError
 en|decodeURIComponent(STR)                      #Same but also percent-encode characters that might have semantics in
                                                 #URIs parts:
-                                                #  : ? & = # + $ ; , / @
+                                                #                              # : ? & = + $ ; , / @
                                                 #I.e. does not percent-encode the following (should escape if it has semantics
                                                 #for specific case):
                                                 #  [:alnum:] - . _ ~ ! ' ( ) *
                                                 #Should be used for URI parts
+[un]escape(STR)                                 #Like en|decodeURIComponent() but using a different set of what's considered URI part:
+                                                #                  ~ ! ' ( )   # : ? & =   $ ; ,
+                                                #I.e. does not percent-encode the following:
+                                                #  [:alnum:] - . _           *           +       / @
+                                                #Also, Unicode chars percent encoded as %uUUUU, not a series of %XX
+                                                #Deprecated
 
 
                                              /=+===============================+=\
