no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -1464,6 +1464,8 @@ unicorn/no-unreadable-array-     ##Avoid ARR destructuring with empty elements l
  destructuring                   ##One empty element at beginning still allowed.
                                  ##Should sets `prefer-destructuring` rule OBJ.array to `false` to avoid conflicts
 no-empty-pattern                  #Avoid empty destructuring, e.g. const {VAR: {}} = VAL
+unicorn/no-object-as-default-
+ parameter                       ##Avoid default argument = {...}. Prefer destructuring {VAR = ..., VAR2 = ...}
 
 no-new-object                     #Avoid new Object()
 
@@ -1545,6 +1547,7 @@ unicorn/prefer-includes          ##Prefer ARR|STR.includes() over ARR|STR.indexO
 unicorn/prefer-flat-map          ##Prefer ARR.flatMap() over ARR.map().flat()
 unicorn/no-reduce                ##Prefer ARR.map|filter() over ARR.reduce()
 unicorn/prefer-negative-index    ##Prefer ARR|STR|TYPED_ARR.slice|splice(-NUM, ...) instead of slice|splice(ARR|STR|TYPED_ARR.length - NUM, ...)
+unicorn/prefer-array-find        ##Prefer ARR.find() over ARR.filter()[0]
 
 no-array-constructor              #Avoids [new] Array(VAL,...)
                                   #[new] Array(NUM) is still allowed
@@ -1569,7 +1572,7 @@ no-useless-concat                 #Avoid STR_LIT + STR2_LIT
 prefer-template                   #Avoid STR + STR2, prefer `...`
 no-template-curly-in-string       #Avoid ${} inside "" or ''
 
-unicorn/*                        ##Module "eslint-plugin-unicorn" (20.1.0)
+unicorn/*                        ##Module "eslint-plugin-unicorn" (21.0.0)
 unicorn/prefer-starts-ends-with  ##Must use STR.startsWith|endsWith() when possible
 unicorn/prefer-trim-start-end    ##Prefer STR.trimStart|End() over STR.trimLeft|Right()
 unicorn/prefer-string-slice      ##Must use STR.slice() instead of STR.substr|substring()
