--- a/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
+++ b/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
@@ -163,8 +163,8 @@ OBJ[VAL]                          #  - object EXPR|SUPER (OBJ)
                                   #  - property EXPR (VAL) or IDENTIFIER (VAR)
                               set|#    or PRIVATE_IDENTIFIER (#VAR)
                                   #  - computed true (VAL) or false (VAR)
-OBJ?.VAR                    setmbl#On MEMBER_EXPRESSION:
-OBJ?.[VAL]                  setmbl#  - optional BOOL
+OBJ?.VAR                     stmbl#On MEMBER_EXPRESSION:
+OBJ?.[VAL]                   stmbl#  - optional BOOL
                             (blt)##Child of MEMBER_EXPRESSION, type 'OptionalMemberExpression'
                             (blt)##  - optional BOOL
                                  ##Child of EXPR, type 'ChainExpression'
@@ -231,7 +231,7 @@ FUNC(...)                         #Child of EXPR, type 'CallExpression':
                                   #  - callee EXPR|SUPER|IMPORT (FUNC)
                                   #  - arguments ARR of EXPR|SPREAD_ELEMENT
                              (bl)*#    or ARGUMENT_PLACEHOLDER
-                           setmbl|#  - optional BOOL (FUNC?.(...))
+                            stmbl|#  - optional BOOL (FUNC?.(...))
                             (blt)##Child of CALL_EXPRESSION, type 'OptionalCallExpression'
                             (blt)##  - optional BOOL (FUNC?.(...))
                               (m)##Type 'OptionalExpression' (see above)
